--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-pandas==2.2.2
-numpy==1.26.4
-requests==2.31.0
-python-telegram-bot==21.7
-python-dotenv==1.0.1
-flask==3.0.2
-gunicorn==21.2.0
-apscheduler==3.10.4
+pandas>=2.0.0
+numpy>=1.24.0
+requests>=2.28.0
+python-telegram-bot>=20.0
+flask>=2.0.0
+gunicorn>=20.0.0
+apscheduler>=3.9.0
