--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-pandas>=2.0.0
-numpy>=1.24.0
-requests>=2.28.0
-python-telegram-bot>=20.0
-flask>=2.0.0
-gunicorn>=20.0.0
-apscheduler>=3.9.0
+flask==2.3.3
+gunicorn==21.2.0
+requests==2.31.0
+pandas==2.0.3
+numpy==1.24.3
+apscheduler==3.10.4
