--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 flask==2.3.3
 gunicorn==21.2.0
 requests==2.31.0
-pandas==2.0.3
+pandas==1.5.3
 numpy==1.24.3
-apscheduler==3.10.4
+apscheduler==3.10.1
+setuptools==65.5.0
