--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 flask==2.3.3
 gunicorn==21.2.0
 requests==2.31.0
-pandas==1.5.3
-numpy==1.24.3
+apscheduler==3.10.1
+setuptools==65.5.0flask==2.3.3
+gunicorn==21.2.0
+requests==2.31.0
 apscheduler==3.10.1
 setuptools==65.5.0
