--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-flask==2.3.3
-gunicorn==21.2.0
+python-telegram-bot==20.7
+pandas==2.2.0
+numpy==1.26.0
 requests==2.31.0
-apscheduler==3.10.1
-setuptools==65.5.0
+python-dotenv==1.0.0
+flask==3.0.0
+gunicorn==21.2.0
