--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-python-telegram-bot==21.7
-numpy==1.26.4
+numpy==2.0.1
 requests==2.31.0
-python-dotenv==1.0.0
 flask==3.0.2
 gunicorn==21.2.0
+python-dotenv==1.0.0
+schedule==1.2.1
